# learning-fastapi

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  models.py  seed.sh  test_main.py
app/models/: hero.py
app/routers/: heroes.py  teams.py
