[project]
name = "fastapi-example"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "sqlmodel>=0.0.39",
]

[dependency-groups]
dev = [
    "httpx2>=2.9.0",
    "pytest>=9.1.1",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "D",      # Docstrings are useful, but too noisy for this example app.
    "ANN",    # Avoid requiring type annotations on every function.
    "COM812", # Let the formatter decide trailing commas.
]

[tool.ruff.lint.per-file-ignores]
"app/test_*.py" = [
    "S101",    # Pytest uses assert statements.
    "S105",    # Test fixture data can look like hardcoded secrets.
    "S106",    # Test fixture data can look like hardcoded secrets.
    "PLR2004", # Literal status codes/lengths are readable in small tests.
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
